src/browser/base/content/zen-styles/zen-compact-mode.css
/* All overrides for compact mode go here */

@media (-moz-bool-pref: 'zen.view.compact') {
  :root:not([customizing]):not([inDOMFullscreen='true']) {
    @media (-moz-bool-pref: 'zen.view.compact.hide-tabbar') {
      #zen-sidebar-web-panel-wrapper:has(#zen-sidebar-web-panel[pinned='true']) {
        margin-left: calc(var(--zen-sidebar-web-panel-spacing) * 2) !important;
      }

      #zen-sidebar-top-buttons-customization-target {
        padding-inline-start: calc(var(--zen-toolbox-padding) - var(--toolbarbutton-outer-padding)) !important;
      }

      /* Set the extra paddings */
      #tabbrowser-tabpanels {
        :root:not([inDOMFullscreen='true']) #browser:has(#navigator-toolbox[zen-right-side='true']) & {
          padding-right: var(--zen-element-separation) !important;
        }

        :root:not([inDOMFullscreen='true']) #browser:has(#navigator-toolbox:not([zen-right-side='true'])) & {
          padding-left: var(--zen-element-separation) !important;
        }
      }

      #zen-sidebar-splitter {
        display: none !important;
      }

      #navigator-toolbox {
        --zen-toolbox-max-width: 54px !important;
        position: absolute;
        height: calc(100% - var(--zen-element-separation) * 2);
        z-index: 9;
        background: var(--zen-themed-toolbar-bg) !important;
        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
        border-radius: calc(var(--zen-border-radius) + 2px);
        border: 1px solid var(--zen-colors-border);
        border-left-width: 0;
        padding: var(--zen-toolbox-padding) !important;
        transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
        right: calc(100% - var(--zen-element-separation) - 2px);
        top: var(--zen-element-separation);
        opacity: 0;

        #browser:has(#navigator-toolbox[zen-right-side='true']) & {
          left: calc(100% - var(--zen-element-separation) + 2px);
          right: unset;
        }
      }

      #navigator-toolbox:hover,
      #navigator-toolbox[zen-has-hover],
      #navigator-toolbox:focus-within,
      #navigator-toolbox[zen-user-show],
      #navigator-toolbox[flash-popup],
      #navigator-toolbox[has-popup-menu],
      #navigator-toolbox[movingtab],
      #mainPopupSet:has(> #appMenu-popup:hover) ~ toolbox,
      #navigator-toolbox:has(.tabbrowser-tab:active),
      #navigator-toolbox:has(*[open='true']:not(tab):not(#zen-sidepanel-button)) {
        opacity: 1;

        transform: translateX(100%);
        #browser:has(#navigator-toolbox[zen-right-side='true']) & {
          transform: translateX(-100%);
        }
      }
    }

    @media (-moz-bool-pref: 'zen.view.compact.hide-toolbar') {
      #navigator-toolbox {
        --zen-toolbox-top-align: var(--zen-element-separation);
      }

      &:not([inDOMFullscreen='true']) #tabbrowser-tabpanels {
        padding-top: var(--zen-element-separation) !important;
      }

      #sidebar-box,
      #zen-sidebar-web-panel-wrapper:has(#zen-sidebar-web-panel:not([pinned='true'])) {
        margin-top: var(--zen-element-separation) !important;
      }

      #zen-sidebar-web-panel-wrapper:has(#zen-sidebar-web-panel[pinned='true']) {
        margin-top: calc(var(--zen-element-separation) * 2) !important;
      }

      #zen-appcontent-navbar-container {
        position: absolute;
        top: 0;
        transform: translateY(calc(-100% + var(--zen-element-separation) + 1px));
        left: 0;
        z-index: 10;
        background: var(--zen-themed-toolbar-bg);
        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1) !important;
        border-bottom-left-radius: var(--zen-border-radius);
        border-bottom-right-radius: var(--zen-border-radius);
        border: 1px solid var(--zen-colors-border);
        border-top-width: 0px;
        transition: all 0.1s ease-in-out;
        width: 100%;
        opacity: 0;

        :root[tabsintitlebar][sizemode='normal']:not([gtktiledwindow='true']) & {
          border-top-left-radius: env(-moz-gtk-csd-titlebar-radius);
          border-top-right-radius: env(-moz-gtk-csd-titlebar-radius);
          border-left-width: 0;
          border-right-width: 0;
        }
      }

      #zen-appcontent-navbar-container:hover,
      #zen-appcontent-navbar-container[zen-has-hover],
      #zen-appcontent-navbar-container:focus-within,
      #zen-appcontent-navbar-container[zen-user-show],
      #zen-appcontent-navbar-container[has-popup-menu],
      #zen-appcontent-navbar-container:has(*[open='true']) {
        opacity: 1;
        border-top-width: 1px;

        transform: translateY(-1px);
      }
    }
  }
}

